// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup it renders compact correctly 1`] = `
<div
  class="sked-button-group sked-button-group--compact"
>
  <button
    class="sked-button sked-button--transparent"
  >
    <div
      class="sk-visible"
    />
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
  <button
    class="sked-button sked-button--primary"
  >
    <div
      class="sk-visible"
    />
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`ButtonGroup it renders correctly 1`] = `
<div
  class="sked-button-group"
>
  <button
    class="sked-button sked-button--transparent"
  >
    <div
      class="sk-visible"
    />
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
  <button
    class="sked-button sked-button--primary"
  >
    <div
      class="sk-visible"
    />
    <div
      class="sk-pin sk-absolute sk-m-auto sk-flex sk-justify-center sk-items-center"
    >
      <div
        class="loading-spinner sk-invisible"
      >
        <svg
          class="loading-spinner--circular"
          height="18"
          viewBox="25 25 50 50"
          width="18"
        >
          <circle
            class="loading-spinner--path"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="5"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;
